<resources>
    <string name="app_name">ArtistCatalog</string>
    <string name="track_price">Track Price</string>
    <string name="primary_genre">Primary Genre</string>
    <string name="release_date">Release Date</string>
    <string name="track_name">Track Name</string>
    <string name="artist_name">Artist Name</string>
    <string name="songs_with_artist_name">Songs with Artist name</string>
    <string name="search">Search</string>
    <string name="enter_artist">Enter Artist</string>
</resources>