<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="2dp"
    android:background="@color/black">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="7dp">

        <TextView
            android:id="@+id/text_view_artist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artist_name"
            android:textSize="27sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/text_view_track_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/track_name"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/text_view_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_date"
            android:textSize="22sp"/>                                                  TrackPrice

        <TextView
            android:id="@+id/text_view_primary_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/primary_genre"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/text_view_track_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/track_price"
            android:textSize="22sp"/>

    </LinearLayout>


</LinearLayout>