<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:weightSum="10"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <EditText
            android:id="@+id/edit_text_enter_artist"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_artist"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_search"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:backgroundTint="@color/black"/>

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/songs_with_artist_name"
            android:textSize="30sp"
            />

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/linear_layout_recycler_view"
        android:orientation="vertical"
        android:layout_weight="9"
        android:layout_width="match_parent"
        android:background="@color/black"
        android:padding="4dp"
        android:layout_height="0dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"/>

    </LinearLayout>

</LinearLayout>